@@ -1,17 +1,18 @@
 ##*****************************************************************************
-## $Id: ac_humor.m4,v 1.3 2004/03/05 19:13:33 dun Exp $
+## $Id: x_ac_gpl_licensed.m4,v 1.1 2004/03/05 20:04:18 dun Exp $
 ##*****************************************************************************
 #  AUTHOR:
 #    Chris Dunlap <cdunlap@llnl.gov>
 #
 #  SYNOPSIS:
-#    AC_HUMOR
+#    X_AC_GPL_LICENSED
 #
 #  DESCRIPTION:
-#    Check for random silliness.
+#    Acknowledge being licensed under terms of the GNU General Public License.
 ##*****************************************************************************
 
-AC_DEFUN([AC_HUMOR],
+AC_DEFUN([X_AC_GPL_LICENSED],
 [
-  AC_CACHE_CHECK([for a sense of humor], [ac_cv_humor], [ac_cv_humor=yes])
+  AC_DEFINE([GPL_LICENSED], [1],
+    [Define to 1 if licensed under terms of the GNU General Public License.])
 ])
