@@ -1,11 +1,11 @@
 ##*****************************************************************************
-## $Id: ac_ltlibobjs.m4,v 1.3 2003/05/07 18:58:12 dun Exp $
+## $Id: x_ac_ltlibobjs.m4,v 1.1 2004/03/05 20:04:18 dun Exp $
 ##*****************************************************************************
 #  AUTHOR:
 #    Chris Dunlap <cdunlap@llnl.gov>
 #
 #  SYNOPSIS:
-#    AC_LTLIBOBJS
+#    X_AC_LTLIBOBJS
 #
 #  DESCRIPTION:
 #    Adjust LIBOBJS for automake and/or libtool.
@@ -15,7 +15,7 @@
 #    This macro must be placed after AC_REPLACE_FUNCS.
 ##*****************************************************************************
 
-AC_DEFUN([AC_LTLIBOBJS],
+AC_DEFUN([X_AC_LTLIBOBJS],
 [
   LIB@&t@OBJS=`echo "$LIB@&t@OBJS" | sed 's,\.[[^.]]* ,$U&,g;s,\.[[^.]]*$,$U&,'`
   LTLIBOBJS=`echo "$LIB@&t@OBJS" | sed 's,\.[[^.]]* ,.lo ,g;s,\.[[^.]]*$,.lo,'`
